@@ -1,3 +1,5 @@
+- Refactor: Move some properties and methods from ITreasuryBridgeAPI [#qubIT-Fenix-6552]
+
 7.24.14 (19-11-2025)
 - Bug fix: Prevent exception when conclusion bean is null [#UL-IE-1832]
 - Bug fix: Prevent exception when degree module conclusion title is not defined [#UL-FM-3366]
